# eudaq

./: .gitignore  CMakeLists.txt  KILLRUN.local  README.md  STARTRUN  STARTRUN.local  STARTRUN_AHCAL.local  START_hodocope_win.bat  START_hodoscope_win.bat  setup_eudaq_cmshgcal.sh
conf/: 2017May_ahcal_bif.conf
etc/scripts/: KILLRUN.local  STARTRUN.example
main/include/eudaq/: StandardEvent.hh
main/lib/: CMakeLists.txt
main/lib/core/: CMakeLists.txt
main/lib/core/src/: DataCollector.cc  Producer.cc
main/lib/plugins/: CaliceGenericConverterPlugin.cc  ExampleConverterPlugin.cc  HexaBoardConverterPlugin.cc
main/lib/src/: StandardEvent.cc
monitors/onlinemon/: CMakeLists.txt
monitors/onlinemon/include/: HitmapHistos.hh
monitors/onlinemon/src/: HitmapCollection.cc  HitmapHistos.cc  OnlineMon.cxx
producers/: CMakeLists.txt
producers/calice/: CMakeLists.txt
producers/calice/conf/: ahcal_dummy.conf
producers/calice/include/: AHCALProducer.hh  ScReader.hh  SiReader.hh
producers/calice/runscripts/: STARTRUN_AHCAL
producers/calice/src/: AHCALProducer.cc  AHCALProducer.cxx  CaliceGenericConverterPlugin.cc  ScReader.cc
producers/cmshgcal/: CMakeLists.txt  README.md  RpiDaqTcp.py  STARTRUN  STARTRUN_ALL  STARTRUN_DWC  STARTRUN_RPI  pokeTCP.py
producers/cmshgcal/conf/: AllInOneProducer.conf  HgcalProducer.conf  OnlineMon.conf  RpiProducer.conf  hexagonRpi.conf  hgcal.conf
producers/cmshgcal/etc/: connection.xml
producers/cmshgcal/include/: CAEN_v1290.h  IpbusHwController.h  TriggerController.h  WireChamberTriggerController.h
producers/cmshgcal/onlinemon/: CMakeLists.txt
producers/cmshgcal/onlinemon/include/: AhcalCollection.hh  BaseCollection.hh  CorrelationCollection.hh  HexagonCollection.hh  HexagonHistos.hh  HitmapCollection.hh  HitmapHistos.hh  MonitorPerformanceCollection.hh  OnlineMon.hh  OnlineMonConfiguration.hh  OnlineMonWindow.hh  WireChamberCollection.hh  WireChamberHistos.hh
producers/cmshgcal/onlinemon/src/: AhcalCollection.cc  AhcalHistos.cc  HexagonCollection.cc  HexagonHistos.cc  HitmapCollection.cc  HitmapHistos.cc  OnlineMon.cxx  OnlineMonConfiguration.cc  OnlineMonWindow.cc  WireChamberCollection.cc  WireChamberHistos.cc
producers/cmshgcal/scripts/: Convert8bitTo32bit.py  LocalDataOverTCP.py  RpiDaqTcp.py  pokeTCP.py  sleep.c
producers/cmshgcal/src/: CAEN_v1290.cc  HGCalProducer.cxx  HexaBoardConverterPlugin.cc  IpbusHwController.cc  RpiProducer.cxx  TriggerController.cc  WireChamberProducer.cxx  WireChamberTriggerController.cc
producers/cmshgcal_dwc/: CMakeLists.txt  STARTRUN
producers/cmshgcal_dwc/conf/: hgcaldwc.conf
producers/cmshgcal_dwc/include/: CAEN_v1290.h  Unpacker.h  WireChamberTriggerController.h
producers/cmshgcal_dwc/src/: CAEN_v1290.cc  IpbusHwController.cc  Unpacker.cc  WireChamberConverterPlugin.cc  WireChamberProducer.cxx  WireChamberTriggerController.cc
producers/ipbusTest/: CMakeLists.txt  README.md  STARTRUN
producers/ipbusTest/conf/: IpbusTestConfig.conf
producers/ipbusTest/etc/: myaddress.xml  myconnection.xml  skirocaddress.xml  skirocconnection.xml
producers/ipbusTest/include/: IpbusTestController.h
producers/ipbusTest/src/: IpbusTestController.cc  IpbusTestProducer.cxx
sandbox/: README.md  STARTRUN
sandbox/CAEN_v1290_Standalone/: CMakeLists.txt  README.md  install_CAEN_libraries.sh  main.cc
sandbox/CAEN_v1290_Standalone/include/: CAEN_V1290.hpp  Unpacker.hpp
sandbox/CAEN_v1290_Standalone/src/: CAEN_V1290.cc  Unpacker.cc
sandbox/conf/: RpiTestConfig.conf
sandbox/scripts/: decoder.c  fakeDataGeneratorNew.py  fakeDataGeneratorTCP.py  testTCP_client.py
sandbox/src/: RpiTestProducer.cxx
user/calice/: CMakeLists.txt
user/calice/AHCAL/: CMakeLists.txt
user/calice/AHCAL/conf/: ahcal_reprocess.conf  ahcal_win.conf  onlinemonitor.conf
user/calice/AHCAL/include/: AHCALProducer.hh  ScReader.hh
user/calice/AHCAL/src/: AHCALProducer.cc  ScReader.cc
user/calice/BIF_AHCAL/src/: caliceahcalbif_Producer.cxx
user/calice/Hodoscope/: CMakeLists.txt
user/calice/Hodoscope/misc/: hodoscope.conf  hodoscope.ini  hodoscope_ahcal_reprocess.conf  hodoscope_ahcal_reprocess.ini
user/calice/Hodoscope/module/: CMakeLists.txt
user/calice/Hodoscope/module/include/: SC.hh  SiTCP.h  class_Exchanger.h  class_FileManager.hh  class_ParameterManager.hh  class_StringManager.hh  easiroc.h
user/calice/Hodoscope/module/src/: CaliceHodoscopeProducer.cc  SC.cc  SiTCP.cc  class_Exchanger.cc  class_FileManager.cc  class_ParameterManager.cc  class_StringManager.cc
user/calice/conf/: ahcal_reprocess.conf  ahcal_reprocess.ini
user/calice/misc/: START_win.bat
user/calice/module/src/: AHCalRawEvent2LCEventConverter.cc  AHCalRawEvent2StdEventConverter.cc  AhcalHodoscopeDataCollector.cc
